tests/test_assets/semantic/invalid/switch/boolean_case_type.cog
test_bool_case::(value: bool) -> void {
    switch value {
        case 1: {}
        default: {}
    }
}
