tests/test_assets/semantic/invalid/switch/boolean_case_type.expected
semantic error at line 3: switch case type does not match switch expression type
1 semantic error generated.
